force-app/main/default/objects/Anken__c/fields/Account2__c.field-meta.xml
<CustomField>
    <fullName>Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件 (取引先2)</relationshipLabel>
    <relationshipName>Account2</relationshipName>
    <type>Lookup</type>
</CustomField>