force-app/main/default/objects/Anken__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>AnkenToAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>