force-app/main/default/objects/Anken__c/fields/AccountID2__c.field-meta.xml
<CustomField>
    <fullName>AccountID2__c</fullName>
    <formula>Account__r.Id  + &#39;|&#39; +  Account2__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先ID</label>
    <type>Text</type>
</CustomField>