force-app/main/default/objects/Anken__c/fields/AnkenInfo__c.field-meta.xml
<CustomField>
    <fullName>AnkenInfo__c</fullName>
    <label>案件情報</label>
    <type>TextArea</type>
</CustomField>