force-app/main/default/objects/Anken__c/fields/AnkenPlanStartDay__c.field-meta.xml
<CustomField>
    <fullName>AnkenPlanStartDay__c</fullName>
    <label>案件予定開始時間</label>
    <type>Date</type>
</CustomField>