force-app/main/default/objects/Anken__c/fields/AnkenRecruitmentDay__c.field-meta.xml
<CustomField>
    <fullName>AnkenRecruitmentDay__c</fullName>
    <label>案件募集終了予定日</label>
    <type>Date</type>
</CustomField>