force-app/main/default/objects/Anken__c/fields/AnkenRecruitmentFlg__c.field-meta.xml
<CustomField>
    <fullName>AnkenRecruitmentFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>案件募集有効フラグ</label>
    <type>Checkbox</type>
</CustomField>