force-app/main/default/objects/Anken__c/fields/CLanguageCheck__c.field-meta.xml
<CustomField>
    <fullName>CLanguageCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C言語</label>
    <type>Checkbox</type>
</CustomField>