force-app/main/default/objects/Anken__c/fields/CobolYears__c.field-meta.xml
<CustomField>
    <fullName>CobolYears__c</fullName>
    <label>Cobol</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>