force-app/main/default/objects/Anken__c/fields/DotNetCheck__c.field-meta.xml
<CustomField>
    <fullName>DotNetCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>.Net</label>
    <type>Checkbox</type>
</CustomField>