force-app/main/default/objects/Anken__c/fields/DotNetYears__c.field-meta.xml
<CustomField>
    <fullName>DotNetYears__c</fullName>
    <label>DotNetYears</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>