force-app/main/default/objects/Anken__c/fields/JapaneseCertification__c.field-meta.xml
<CustomField>
    <fullName>JapaneseCertification__c</fullName>
    <label>日本語資格</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N1</fullName>
            </value>
            <value>
                <fullName>N2</fullName>
            </value>
            <value>
                <fullName>N3</fullName>
            </value>
            <value>
                <fullName>N4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>