force-app/main/default/objects/Anken__c/fields/JavaCheck__c.field-meta.xml
<CustomField>
    <fullName>JavaCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Java</label>
    <type>Checkbox</type>
</CustomField>