force-app/main/default/objects/Anken__c/fields/JavaYears__c.field-meta.xml
<CustomField>
    <fullName>JavaYears__c</fullName>
    <label>Java</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>