force-app/main/default/objects/Anken__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>緊急度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>至急</fullName>
            </value>
            <value>
                <fullName>急</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>普通</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>