force-app/main/default/objects/Anken__c/fields/MonthPriceFrom__c.field-meta.xml
<CustomField>
    <fullName>MonthPriceFrom__c</fullName>
    <label>月単価（から）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>