force-app/main/default/objects/Anken__c/fields/MonthPriceTo__c.field-meta.xml
<CustomField>
    <fullName>MonthPriceTo__c</fullName>
    <label>月単価（まで）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>