force-app/main/default/objects/Anken__c/fields/MonthTimeFrom__c.field-meta.xml
<CustomField>
    <fullName>MonthTimeFrom__c</fullName>
    <label>稼働時間（から）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>