force-app/main/default/objects/Anken__c/fields/MonthTimeTo__c.field-meta.xml
<CustomField>
    <fullName>MonthTimeTo__c</fullName>
    <label>稼働時間（まで）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>