force-app/main/default/objects/Anken__c/fields/SAPYears__c.field-meta.xml
<CustomField>
    <fullName>SAPYears__c</fullName>
    <label>SAP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>