force-app/main/default/objects/Anken__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>最寄駅</label>
    <length>80</length>
    <type>Text</type>
</CustomField>