force-app/main/default/objects/Anken__c/listViews/WEB_TO_LEAD_Anken.listView-meta.xml
<ListView>
    <fullName>WEB_TO_LEAD_Anken</fullName>
    <filterScope>Queue</filterScope>
    <label>WEB‐TO-LEAD</label>
    <queue>WEB_TO_LEAD</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>